syntax = "proto3";

package user;

option go_package = "./service/user";

service User {
    rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {}
}

message CreateUserRequest {
    string name = 1;
    string password = 2;
}

message CreateUserReply {
    string result = 1;
}